# projektarbeit

./: .gitignore  FlutterAppDoku.md  README.md  Servebot.pptx  basti_wohnung.yaml  basti_wohnung_1.yaml  connect_to_ssh_server.sh  db-befehle.txt  install_dependencies.sh  mysql.connector  start_xampp.sh  test_teleop.py  turtlebot .sql  turtlebot.sql  turtlebot_rsa  ~$Servebot.pptx
Dokumentation/Diagram/: Diagram.xml
Dokumentation/DokumentationApp/: FlutterDokuApp.md
DokumentationApp/: FlutterDokuApp  FlutterDokuApp.md
Face_Recognition/: facerec_from_webcam_faster_plus_gtts_ROS.py
FlutterApp/Flutter_Apk/: ReadMe_How_to_install.txt
FlutterApp/turtlebot/: .gitignore  README.md  pubspec.yaml
Prasentationen/: Servebot-Floria.pptx  Servebot-Patrick.pptx  Servebot-Stefan.pptx
backend/: .env  Dockerfile  Makefile  docker-compose.yml  pip-requirements.txt  pip3_requirements.txt
backend/backend/: pip-requirements.txt  pip3_requirements.txt
backend/controller/: Dockerfile  pyproject.toml
backend/controller/controller/: models.py  websocket.py
backend/ros/: Dockerfile  Dockerfile.save
catkin_ws/: .cproject
catkin_ws/.metadata/: version.ini
controller/: controller-minimal.py  controller.py  controller_old.py  databaseClass.py  database_access.py  move_forward.py  teleop_keyboard.py  test-user.txt  ws_client.py
controller_old/: controller-minimal.py  init_position.py
turtlebot_scripts/: cmd_vel_test.sh  gazebo_start.sh  go_to_position.sh  go_to_position_start.sh  keyboard_start.sh  load_map_house.sh  rviz_start.sh  slam_start.sh
(+310 files in other folders)
