[tool.poetry]
name = "controller"
version = "0.1.0"
description = ""
authors = ["FloforPresident <florian.geiger@kurzdigital.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
websockets = "^8.1"
psycopg2-binary = "^2.8.6"
SQLAlchemy-serializer = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
